--- a/disclaimers.html
+++ b/disclaimers.html
@@ -174,10 +174,13 @@
                     This disclaimer was created using Termly's <a style="color: rgb(48, 48, 241) !important;" href="https://termly.io/products/disclaimer-generator/">Disclaimer Generator</a>.
                     </div>
                 </div>
-            <div class="rightcolumn" width="30%">
-              <p>Thanks for visiting</p>
-              <img src="subject.jpeg" width="30%" height="30%">
-            </div>
+                <div class="rightcolumn" width="30%">
+                  <p>Thanks for visiting!</p>
+                  <img src="subject.jpeg" width="30%" height="30%">
+                  <p>Contact me at:<br>
+                    <a href="mailto:MeganGorham073@gmail.com">MeganGorham073@gmail.com</a>
+                    </p>
+                </div>
           </div>
 <hr>
 <div id="disclaimer">
