--- a/request.html
+++ b/request.html
@@ -111,8 +111,11 @@
             </div>
             
             <div class="rightcolumn" width="30%">
-              <p>Thanks for visiting</p>
+              <p>Thanks for visiting!</p>
               <img src="subject.jpeg" width="30%" height="30%">
+              <p>Contact me at:<br>
+                <a href="mailto:MeganGorham073@gmail.com">MeganGorham073@gmail.com</a>
+                </p>
             </div>
           </div>
 <hr>
