9/20/2022 Updates (Manual Upload)
Had an issue with GitHub Desktop

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               <p>Contact me at:<br>
                 <a href="mailto:MeganGorham073@gmail.com">MeganGorham073@gmail.com</a>
                 </p>
-                <h3>Megan will be at the Eastern Shore Fair in Salisbury on December 5, 2022!</h3><br>
+                <p>Megan will be at the Eastern Shore Fair in Salisbury on December 5, 2022!</p><br>
                 <h3>Her Latest Creation:</h3>
                 <figure>
                   <img src="images/new.png" width="100%" height="100%">
