--- a/disclaimers.html
+++ b/disclaimers.html
@@ -174,12 +174,21 @@
                     This disclaimer was created using Termly's <a style="color: rgb(48, 48, 241) !important;" href="https://termly.io/products/disclaimer-generator/">Disclaimer Generator</a>.
                     </div>
                 </div>
+                
                 <div class="rightcolumn" width="30%">
                   <p>Thanks for visiting!</p>
-                  <img src="subject.jpeg" width="30%" height="30%">
+                  <img src="images/subject.jpeg" width="30%">
                   <p>Contact me at:<br>
                     <a href="mailto:MeganGorham073@gmail.com">MeganGorham073@gmail.com</a>
                     </p>
+                    <p><u>Latest Updates:</u></p>
+                    <p>Megan will be at the Eastern Shore Fair in Salisbury on December 5, 2022!</p>
+                    <p>Her Latest Creation:</p>
+                    <figure>
+                      <img src="images/new.png" width="100%" height="100%">
+                      <figcaption>Custom Made Cthulhu</figcaption>
+                    </figure>
+                    
                 </div>
           </div>
 <hr>
