--- a/index.html
+++ b/index.html
@@ -141,8 +141,9 @@
               <p>Contact me at:<br>
                 <a href="mailto:MeganGorham073@gmail.com">MeganGorham073@gmail.com</a>
                 </p>
-                <p>Megan will be at the Eastern Shore Fair in Salisbury on December 5, 2022!</p><br>
-                <h3>Her Latest Creation:</h3>
+                <p><u>Latest Updates:</u></p>
+                <p>Megan will be at the Eastern Shore Fair in Salisbury on December 5, 2022!</p>
+                <p>Her Latest Creation:</p>
                 <figure>
                   <img src="images/new.png" width="100%" height="100%">
                   <figcaption>Custom Made Cthulhu</figcaption>
