--- a/disclaimers.html
+++ b/disclaimers.html
@@ -92,7 +92,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="logo.png" width="70%" height="70%">
+        <img src="images/logo.png" width="70%" height="70%">
       </div>
 
       <div class="topnav">
@@ -174,7 +174,7 @@
                     This disclaimer was created using Termly's <a style="color: rgb(48, 48, 241) !important;" href="https://termly.io/products/disclaimer-generator/">Disclaimer Generator</a>.
                     </div>
                 </div>
-                
+
                 <div class="rightcolumn" width="30%">
                   <p>Thanks for visiting!</p>
                   <img src="images/subject.jpeg" width="30%">
