--- a/reviews.html
+++ b/reviews.html
@@ -92,7 +92,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="logo.png" width="70%" height="70%">
+        <img src="images/logo.png" width="70%" height="70%">
       </div>
 
       <div class="topnav">
