--- a/request.html
+++ b/request.html
@@ -133,8 +133,8 @@
                   </textarea>
                   <br><br> 
                   <label for="pictures"><p>Add Pictures</p></label>
-                  <input type="file" name="pictures"><br><br>
-                  <input type="submit" value="Submit" class="submitbtn" style="background-color: green">
+                  <input type="file" name="pictures" class="filesbtn"><br><br>
+                  <input type="submit" value="Submit" class="submitbtn">
               
                 </form>
               </div>
