--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 </p>
                 <p><u>Latest Updates:</u></p>
                 <p>Megan will be at the Eastern Shore Fair in Salisbury on December 5, 2022!</p>
-                <p>Her Latest Creation:</p>
+                <p><u>Her Latest Creation:</u></p>
                 <figure>
                   <img src="images/new.png" width="100%" height="100%">
                   <figcaption>Custom Made Cthulhu</figcaption>
