--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
 </head>
 <body>
     <div class="header">
-        <img src="images/logo.png" width="70%" height="70%">
+        <img src="images/logo.png" width="60%" height="60%">
       </div>
 
       <div class="topnav">
         <a href="index.html">Home</a>
-        <a href="about.html">About Megan</a>
+        <a href="about.html">About The Artist</a>
         <a href="https://www.instagram.com/amigurumixadventures/" style="float:right" target="resource window">Instagram</a>
-        <a href="etsy.html" style="float:right">Etsy</a>
+        <a href="https://www.etsy.com/shop/florencemaegifts" style="float:right" target="resource window">Etsy</a>
         <a href="reviews.html">Reviews</A>
         <a href="request.html">Request Custom Piece</a>
         <a href="disclaimers.html">Disclaimers</a>
@@ -109,23 +109,24 @@
                 <div class="column">
                   <img src="images/example1.jpeg">
                   <img src="images/example5.png">
-                  <img src="images/example3.png">
+                  <img src="images/example18.png">
                   <img src="images/example12.png">
                 </div>
                 <div class="column">
                   <img src="images/example8.png">
-                  <img src="images/example4.jpeg">
-                  <img src="images/example5.png">
-                </div>
-                <div class="column">
-                  <img src="images/example11.png">
+                  <img src="images/example3.png">
                   <img src="images/example7.png">
-                  <img src="images/example6.png">
-                  <img src="images/example13.png">
                 </div>
                 <div class="column">
                   <img src="images/example2.jpeg">
+                  <img src="images/example17.png">
+                  <img src="images/example4.jpeg">
+                  <img src="images/example15.png">
+                </div>
+                <div class="column">
+                  <img src="images/example16.png">
                   <img src="images/example10.png">
+                  <img src="images/example6.png">
                   <img src="images/example14.png">
                 </div>
               </div>
