Image Optimizations Part 2

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 </div>
                 <div class="column">
 
-                  <img id="example8" src="images/example8.png" alt="PokeStick">
+                  <img id="example8" src="images/example8.png" alt="PokeStick" style="width:100%;max-width:300px">
 
                   <script>
                     // Get the modal
