update instagram link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="topnav">
         <a href="index.html">Home</a>
         <a href="about.html">About The Artist</a>
-        <a href="https://www.instagram.com/amigurumixadventures/" style="float:right" target="resource window">Instagram</a>
+        <a href="https://www.instagram.com/florencemaegifts/" style="float:right" target="resource window">Instagram</a>
         <a href="https://www.etsy.com/shop/florencemaegifts" style="float:right" target="resource window">Etsy</a>
         <a href="reviews.html">Reviews</A>
         <a href="request.html">Request Custom Piece</a>
