--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                     }
                     </script>
 
-                  <img id="example6" src="images/example6.png" alt="Stich from Lilo and Stitch">
+                  <img id="example6" src="images/example6.png" alt="Stitch from Lilo and Stitch">
 
                   <script>
                     // Get the modal
