Accessibility Audit Changes

--- a/reviews.html
+++ b/reviews.html
@@ -16,23 +16,23 @@
 </head>
 <body>
     <div class="header">
-        <img src="images/logo.png" width="60%" height="60%">
+        <img src="images/logo.png" width="60%" height="60%" alt="Florence Mae Gifts logo">
       </div>
 
       <div class="topnav">
         <a href="index.html"><i class="fa-solid fa-house"></i> Home</a>
         <a href="about.html"><i class="fa-solid fa-palette"></i> About The Artist</a>
-        <a href="https://www.instagram.com/florencemaegifts/" style="float:right" target="resource window"><i class="fa-brands fa-instagram"></i> Instagram</a>
-        <a href="https://www.etsy.com/shop/florencemaegifts" style="float:right" target="resource window"><i class="fa-brands fa-etsy" alt="etsy"></i>  Etsy</a>
         <a href="reviews.html"><i class="fa-solid fa-star"></i> Reviews</A>
         <a href="request.html"><i class="fa-solid fa-keyboard"></i> Request Custom Piece</a>
+        <a href="disclaimers.html"><i class="fa-solid fa-scale-balanced"></i> Disclaimers</a> 
         <a href="#contact" style="float:right"><i class="fa-solid fa-message"></i> Contact</a>
-        <a href="disclaimers.html"><i class="fa-solid fa-scale-balanced"></i> Disclaimers</a>
+        <a href="https://www.instagram.com/florencemaegifts/" style="float:right" target="resource window"><i class="fa-brands fa-instagram"></i> Instagram</a>
+        <a href="https://www.etsy.com/shop/florencemaegifts" style="float:right" target="resource window"><i class="fa-brands fa-etsy" alt="etsy"></i>  Etsy</a>
         </div>
 
         <div class="row">
             <div class="leftcolumn" width="70%">
-                  <p><center><img src="images/review.png"></center></p><br>
+                  <p><center><img src="images/review.png" alt="Facebook Marketplace Review of Florence Mae Gifts"></center></p><br>
                   
                   <p><i>"Everyone should order something from this gal.  She does amazing work.  Everything she makes is top notch quality.  She made me a doll of me and the guy is still in great condition.  I highly reommend her for any occasion."</i><br>-Jeremy C</p>
 
