--- a/about.html
+++ b/about.html
@@ -16,23 +16,23 @@
 </head>
 <body>
     <div class="header">
-        <img src="images/logo.png" width="60%" height="60%">
+        <img src="images/logo.png" width="60%" height="60%" alt="Florence Mae Gifts logo">
       </div>
 
       <div class="topnav">
         <a href="index.html"><i class="fa-solid fa-house"></i> Home</a>
         <a href="about.html"><i class="fa-solid fa-palette"></i> About The Artist</a>
-        <a href="https://www.instagram.com/florencemaegifts/" style="float:right" target="resource window"><i class="fa-brands fa-instagram"></i> Instagram</a>
-        <a href="https://www.etsy.com/shop/florencemaegifts" style="float:right" target="resource window"><i class="fa-brands fa-etsy" alt="etsy"></i>  Etsy</a>
         <a href="reviews.html"><i class="fa-solid fa-star"></i> Reviews</A>
         <a href="request.html"><i class="fa-solid fa-keyboard"></i> Request Custom Piece</a>
-        <a href="#contact" style="float:right"><i class="fa-solid fa-message"></i> Contact</a>
         <a href="disclaimers.html"><i class="fa-solid fa-scale-balanced"></i> Disclaimers</a>
+        <a href="#contact" style="float:right"><i class="fa-solid fa-message"></i> Contact</a>
+        <a href="https://www.instagram.com/florencemaegifts/" style="float:right" target="resource window"><i class="fa-brands fa-instagram"></i> Instagram</a>
+        <a href="https://www.etsy.com/shop/florencemaegifts" style="float:right" target="resource window"><i class="fa-brands fa-etsy" alt="etsy"></i>  Etsy</a>
         </div>
 
         <div class="row">
             <div class="leftcolumn" width="70%">
-                  <center><img src="images/subject.jpeg" width="30%" height="30%" alt="Megan Gorham Portrait"></center>
+                  <center><img src="images/subject.jpeg" width="30%" height="30%" alt="Florence Mae Gifts creator - Megan Gorham, Portrait"></center>
                   <p>I was born and raised in Salisbury, Maryland. I'm married and a mother to a 4-year-old daughter and an infant Son. Growing up, I was a huge fan of Japanese culture, specifically anime and manga. I had many pen pals in Japan that I would exchange letters and collectible items with while also learning about Japanese customs. My family has had a long history of seamstresses, knitters, and crocheters, so I was expertly taught at a young age on how to do multiple styles of knitting and crochet. This started a love affair that combined my appreciation of Japanese culture with my love for creating things through crochet. This hobby eventually turned into a passion of creating high quality, hand-made, amigurumi dolls.</p>
 
                   <p>Amigurumi is the Japanese word which describes small knitted or crocheted stuffed toys, often in the shape of characters, animals, mini foods, household objects and scenery. It comes from the two root words ami, meaning crocheted or knitted, and nuigurumi, which means stuffed doll. Since their inception, these handmade toys have become synonymous with the whimsical subculture many already associate with Japan, a movement which has spawned thousands of imaginative works. My dolls are inspired by characters in Japanese anime, Pokémon, Star Wars, Disney movies, and much more. I've been making amigurumi dolls for friends and family for years and have now expanded to sell on sites like <a href="https://www.etsy.com/shop/florencemaegifts" target="resource window">Etsy</a> and Facebook Marketplace as well as attending local fairs on the Eastern Shore of Maryland, Virginia, and Delaware.</p>
