--- a/request.html
+++ b/request.html
@@ -3,8 +3,9 @@
 <head>
     <title>Request Custom Piece - FlorenceMaeGifts.com</title>
     <script src="https://kit.fontawesome.com/aeba1ec76b.js" crossorigin="anonymous"></script>
-    <meta name="description" content="Florence Mae Gifts">
+    <meta name="description" content="Florence Mae Gifts - Request A Custom Piece">
     <meta http-equiv="author" content ="Chris Gorham">
+    <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=Varela+Round&display=swap" rel="stylesheet">
