--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="https://kit.fontawesome.com/aeba1ec76b.js" crossorigin="anonymous"></script>
     <meta name="description" content="Florence Mae Gifts">
     <meta http-equiv="author" content ="Chris Gorham">
+    <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=Varela+Round&display=swap" rel="stylesheet">
