--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=Varela+Round&display=swap" rel="stylesheet">
-    <link href="biosite.css" type="text/css" rel="stylesheet">
+    <link href="fmg.css" type="text/css" rel="stylesheet">
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -76,9 +76,9 @@
               <p><i class="fa-regular fa-thumbs-up fa-fw page-margin-right"></i>Thanks for visiting!</p>
               
               <p><u>Latest Creations:</u></p>
-              <p><i>Sep 15, 2022</i></p> 
-              <p>Custom made Cthulhu with rollerskates and personalized t-shirt</p>
-                  <img id="new1" src="images/new.png" alt="Custom Made Cthulhu" width="70%">
+              <p><i>Nov 19, 2022</i></p> 
+              <p>Baby Santa Diaper Cover Set</p>
+                  <img id="new1" src="images/new.png" alt="Baby Santa Diaper Cover Set" width="70%">
                   
                   <script>
                     // Get the modal
