--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
               <p><u>Latest Creations:</u></p>
               <p><i>Nov 19, 2022</i></p> 
               <p>Baby Santa Diaper Cover Set</p>
-                  <img id="new1" src="images/new.png" alt="Baby Santa Diaper Cover Set" width="70%">
+                  <img id="new1" src="images/new.jpeg" alt="Baby Santa Diaper Cover Set" width="70%">
                   
                   <script>
                     // Get the modal
