--- a/reviews.html
+++ b/reviews.html
@@ -1,23 +1,53 @@
+<!----
+  ======================================
+; Title: reviews.html 
+; Author: Chris Gorham
+; Date: 11 Jan 2023
+; Description: The code for the Florence Mae Gifts Reviews Page (reviews.html)
+; Sources Used: W3 Schools Theme
+;=====================================
+----->
+
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <title>Reviews - FlorenceMaeGifts.com</title>
+    
+    <title>Reviews - Florence Mae Gifts</title>
     <script src="https://kit.fontawesome.com/aeba1ec76b.js" crossorigin="anonymous"></script>
-    <meta name="description" content="Florence Mae Gifts - Reviews">
+    <meta name="description" content="Florence Mae Gifts">
     <meta http-equiv="author" content ="Chris Gorham">
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=Varela+Round&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans+Extra+Condensed:wght@100&display=swap" rel="stylesheet">
     <link href="fmg.css" type="text/css" rel="stylesheet">
+    <link href="logo-font/logo-font.css" type="text/css" rel="stylesheet">
+    <link rel="icon" href="images/favicon.png">
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!---The JavaScript source doe for the theme functions setDefaultTheme and setSelectedTheme-->
+    <script src="theme.js"></script>
+
 </head>
-<body>
-    <div class="header">
-        <img src="images/logo.png" width="60%" height="60%" alt="Florence Mae Gifts logo">
+
+<body class="light-theme">
+
+  <!-- Creates the icon and adds the onclick functionality for changing between themes-->
+  <i onclick="toggleMode(this)" id="icon-mode" class="fa fa-toggle-off pull-right" style="font-size: 28px;"><span id="icon-text"></span></i><br><br>
+
+      <div class="header">
+        <table>
+          <TR>
+            <TD style="width:15%"><img src="images/flower1.png" width="80%" height="80%"></TD>
+            <TD style="width:30%"><h1>Florence Mae</h1><hr width="200"><h2>GIFTS</h2></TD>
+            <TD style="width:15%"><img src="images/flower2.png" width="80%" height="80%"></TD>
+          </TR>
+        </table>
       </div>
 
       <div class="topnav">
@@ -201,5 +231,44 @@
 <div id="disclaimer">
   <p>Please refer to my <a href="disclaimers.html">disclaimers</a> page for all licensing and legal information.</p>
 </div>
+
+
+<script>
+  // sets a default theme; this code needs to be first
+  setDefaultTheme();
+
+  // the function which will toggle between the two different themes
+  function toggleMode(x)
+  {
+      let colorTheme = document.body.classList; // establishes the variable that holds the body CSS class
+      let iconMode = x.classList; // gets the classes 
+
+      // if the value shows light, update the preference in storage
+      if (colorTheme.value === "light-theme")
+      {
+          localStorage.clear();
+          localStorage.setItem("mode", "dark-theme");
+          localStorage.setItem("iconMode", "fa-toggle-on");
+          localStorage.setItem("iconText", "Dark Mode");
+      }
+      
+      else
+      {
+          localStorage.clear();
+          localStorage.setItem("mode", "light-theme");
+          localStorage.setItem("iconMode", "fa-toggle-off");
+          localStorage.setItem("iconText", "Light Mode");
+      }
+
+      // applies the updated selection
+      colorTheme.value = localStorage.getItem("mode");
+      iconMode.value = `fa ${localStorage.getItem("iconMode")} pull-right`;
+      document.getElementById("icon-text").innerHTML = localStorage.getItem("iconText");
+  }
+
+</script>
+
+
+
 </body>
 </html>
