CSS updates & new images

--- a/reviews.html
+++ b/reviews.html
@@ -4,7 +4,7 @@
 ; Author: Chris Gorham
 ; Date: 11 Jan 2023
 ; Description: The code for the Florence Mae Gifts Reviews Page (reviews.html)
-; Sources Used: W3 Schools Theme
+; Sources Used: W3 Schools CSS Template https://www.w3schools.com/css/css_templates.asp
 ;=====================================
 ----->
 
