--- a/disclaimers.html
+++ b/disclaimers.html
@@ -37,8 +37,8 @@
 
 <body class="light-theme">
 
-  <!-- Creates the icon and adds the onclick functionality for changing between themes-->
-  <i onclick="toggleMode(this)" id="icon-mode" class="fa fa-toggle-off pull-right" style="font-size: 28px;"><span id="icon-text"></span></i><br><br>
+<!-- Creates the icon and adds the onclick functionality for changing between themes-->
+<i onclick="toggleMode(this)" id="icon-mode" class="fa fa-toggle-off pull-right" style="font-size: 20px;"><span id="icon-text" class="toggle"></span></i><br><br>
 
       <div class="header">
         <table>
@@ -140,7 +140,7 @@
 
 
 <div id="disclaimer">
-  
+
       <hr>
       <p>Please refer to my <a href="disclaimers.html">disclaimers</a> page for all licensing and legal information.</p>
 
