--- a/request.html
+++ b/request.html
@@ -103,7 +103,7 @@
             <br><br><hr width="75%">
 
                   <a id="contact"></a>
-                  <p><i class="fa-solid fa-message"></i> Send me a message here:<br>
+                  <div><i class="fa-solid fa-message"></i> Send me a message here:<br>
                     <div class="container">
                       <form action="https://formspree.io/f/xnqrpewl">
                     
@@ -120,6 +120,7 @@
                     
                       </form>
                       </div>
+                    </div>
 </div>
 
 
