--- a/request.html
+++ b/request.html
@@ -102,8 +102,8 @@
 
             <br><br><hr width="75%">
 
-                  <a id="contact"></a>
-                  <div><i class="fa-solid fa-message"></i> Send me a message here:<br>
+                  <a id="contact"></a><br>
+                  <div><i class="fa-regular fa-messages"></i> Send me a message here:<br><br>
                     <div class="container">
                       <form action="https://formspree.io/f/xnqrpewl">
                     
@@ -120,7 +120,7 @@
                     
                       </form>
                       </div>
-                    </div>
+                    </div></div>
 </div>
 
 
