--- a/reviews.html
+++ b/reviews.html
@@ -119,8 +119,8 @@
 
             <br><br><hr width="75%">
 
-                  <a id="contact"></a>
-                  <p><i class="fa-solid fa-message"></i> Send me a message here:<br>
+                  <a id="contact"></a><br>
+                  <div><i class="fa-solid fa-message"></i> Send me a message here:<br><br>
                     <div class="container">
                       <form action="https://formspree.io/f/xnqrpewl">
                     
@@ -136,10 +136,8 @@
                         <input type="submit" name="submitbtn" value="Submit"><br><br><br>
                     
                       </form>
-                      </div>
+                      </div></div></div>
 </div>
-
-      <hr>
 
 
 <div id="disclaimer">
