--- a/index.html
+++ b/index.html
@@ -581,8 +581,8 @@
 
               <br><br><hr width="75%">
 
-                    <a id="contact"></a>
-                    <p><i class="fa-solid fa-message"></i> Send me a message here:<br>
+                    <a id="contact"></a><br>
+                    <p><i class="fa-solid fa-message"></i> Send me a message here:<br><br>
                       <div class="container">
                         <form action="https://formspree.io/f/xnqrpewl">
                       
