--- a/request.html
+++ b/request.html
@@ -103,7 +103,7 @@
             <br><br><hr width="75%">
 
                   <a id="contact"></a><br>
-                  <div><i class="fa-regular fa-messages"></i> Send me a message here:<br><br>
+                  <div><i class="fa-solid fa-message"></i> Send me a message here:<br><br>
                     <div class="container">
                       <form action="https://formspree.io/f/xnqrpewl">
                     
