--- a/requestleftcolumn.html
+++ b/requestleftcolumn.html
@@ -7,5 +7,8 @@
 ; Sources Used: W3 Schools CSS Template https://www.w3schools.com/css/css_templates.asp
 ;=====================================
 ----->
+<html>
+  <head></head>
 
 <script src="https://www.cognitoforms.com/f/seamless.js" data-key="1AQQgH-YkECjnHI7fKBekg" data-form="1"></script>
+</html>
