--- a/requestleftcolumn.html
+++ b/requestleftcolumn.html
@@ -9,6 +9,8 @@
 ----->
 <html>
   <head></head>
+<body>
+  <script src="https://www.cognitoforms.com/f/seamless.js" data-key="1AQQgH-YkECjnHI7fKBekg" data-form="1"></script>
+</body>
 
-<script src="https://www.cognitoforms.com/f/seamless.js" data-key="1AQQgH-YkECjnHI7fKBekg" data-form="1"></script>
 </html>
