--- a/disclaimernote.html
+++ b/disclaimernote.html
@@ -1,5 +1,5 @@
 
         <hr>
-        <p>Please refer to my <a href="disclaimers.html">disclaimers</a> page for all licensing and legal information. Site Last Updated: January 28, 2023.</p>
+        <p>Please refer to my <a href="disclaimers.html">disclaimers</a> page for all licensing and legal information. Last Updated: January 28, 2023.</p>
 
   
