--- a/reviewsleftcolumn.html
+++ b/reviewsleftcolumn.html
@@ -1,3 +1,13 @@
+<!----
+  ======================================
+; Title: reviewsleftcolumn.html 
+; Author: Chris Gorham
+; Date: 11 Jan 2023
+; Description: The code for the Florence Mae Gifts Reviews Left Column Section
+; Sources Used: W3 Schools CSS Template https://www.w3schools.com/css/css_templates.asp
+;=====================================
+----->
+
 <p>
     5 Star Rated on Etsy! Check out my shop reviews:<br>
     <a href="https://www.etsy.com/shop/florencemaegifts#reviews" target="resource window">Etsy Reviews</a><br><br>
