--- a/rightcolumn.html
+++ b/rightcolumn.html
@@ -7,6 +7,8 @@
 ; Sources Used: W3 Schools CSS Template https://www.w3schools.com/css/css_templates.asp
 ;=====================================
 ----->
+
+
       <div class="right-column-text">
 
         <p><i class="fa-regular fa-thumbs-up fa-fw page-margin-right"></i>Thanks for visiting!</p>
@@ -36,7 +38,7 @@
                   <input type="text" id="email" name="email" placeholder="Your email.."><br><br>
   
                   <label for="subject">Your Message:</label><br><br>
-                  <textarea id="subject" name="" placeholder="Write something.." style="height:100px"></textarea><br><br>
+                  <textarea id="subject" name="textarea" placeholder="Write something.." style="height:100px"></textarea><br><br>
               
                   <input type="submit" name="submitbtn" value="Submit"><br><br><br>
               
