--- a/disclaimernote.html
+++ b/disclaimernote.html
@@ -1,5 +1,16 @@
 
         <hr>
         <p>Please refer to my <a href="disclaimers.html">disclaimers</a> page for all licensing and legal information. Last Updated: January 28, 2023.</p>
+        
+        <div class="footer">
+
+                <a href="https://www.instagram.com/florencemaegifts/" target="resource window"><i class="fa-brands fa-instagram"></i></a>
+
+                <a href="#contact"><i class="fa-regular fa-envelope"></i></a>
+        
+                <a href="https://www.etsy.com/shop/florencemaegifts" target="resource window"><i class="fa-brands fa-etsy"></i></a>
+
+        </div>
+
 
   
