--- a/disclaimernote.html
+++ b/disclaimernote.html
@@ -4,11 +4,11 @@
         
         <div class="footer">
 
-                <a href="https://www.instagram.com/florencemaegifts/" target="resource window"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.instagram.com/florencemaegifts/" class="disclaimer-links" target="resource window"><i class="fa-brands fa-instagram"></i></a>
 
-                <a href="#contact"><i class="fa-regular fa-envelope"></i></a>
+                <a href="#contact" class="disclaimer-links"><i class="fa-regular fa-envelope"></i></a>
         
-                <a href="https://www.etsy.com/shop/florencemaegifts" target="resource window"><i class="fa-brands fa-etsy"></i></a>
+                <a href="https://www.etsy.com/shop/florencemaegifts" class="disclaimer-links" target="resource window"><i class="fa-brands fa-etsy"></i></a>
 
         </div>
 
