--- a/aboutleftcolumn.html
+++ b/aboutleftcolumn.html
@@ -2,14 +2,17 @@
   ======================================
 ; Title: aboutleftcolumn.html 
 ; Author: Chris Gorham
-; Date: 28 Jan 2023
+; Date Created: 28 Jan 2023
+; Last Updated: 04 Feb 2023
 ; Description: The code for the Florence Mae Gifts About The Artist Left Column Section
 ; Sources Used: W3 Schools CSS Template https://www.w3schools.com/css/css_templates.asp
 ;=====================================
 ----->
 
-<center><img src="images/subject.jpeg" width="30%" height="30%" alt="Florence Mae Gifts creator - Megan Gorham, Portrait"></center>
-<p>I was born and raised in Salisbury, Maryland. I'm married and a mother to a 4-year-old daughter and an infant Son. Growing up, I was a huge fan of Japanese culture, specifically anime and manga. I had many pen pals in Japan that I would exchange letters and collectible items with while also learning about Japanese customs. My family has had a long history of seamstresses, knitters, and crocheters, so I was expertly taught at a young age on how to do multiple styles of knitting and crochet. This started a love affair that combined my appreciation of Japanese culture with my love for creating things through crochet. This hobby eventually turned into a passion of creating high quality, hand-made, amigurumi dolls.</p>
+<div class="stuff-centered">
+  <img src="images/subject.jpeg" width="25%" height="25%" alt="Florence Mae Gifts creator - Megan Gorham, Portrait">
+</div>
+<p>My name is Megan Gorham and thank you for visiting my website! A little about me... I was born and raised in Salisbury, Maryland. I'm married and a mother to a 4-year-old daughter and an infant Son. Growing up, I was a huge fan of Japanese culture, specifically anime and manga. I had many pen pals in Japan that I would exchange letters and collectible items with while also learning about Japanese customs. My family has had a long history of seamstresses, knitters, and crocheters, so I was expertly taught at a young age on how to do multiple styles of knitting and crochet. This started a love affair that combined my appreciation of Japanese culture with my love for creating things through crochet. This hobby eventually turned into a passion of creating high quality, hand-made, amigurumi dolls.</p>
 
 <p>Amigurumi is the Japanese word which describes small knitted or crocheted stuffed toys, often in the shape of characters, animals, mini foods, household objects and scenery. It comes from the two root words ami, meaning crocheted or knitted, and nuigurumi, which means stuffed doll. Since their inception, these handmade toys have become synonymous with the whimsical subculture many already associate with Japan, a movement which has spawned thousands of imaginative works. My dolls are inspired by characters in Japanese anime, Pokémon, Star Wars, Disney movies, and much more. I've been making amigurumi dolls for friends and family for years and have now expanded to sell on sites like <a href="https://www.etsy.com/shop/florencemaegifts" target="resource window">Etsy</a> and Facebook Marketplace as well as attending local fairs on the Eastern Shore of Maryland, Virginia, and Delaware.</p>
                   
