--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,14 @@
+<!----
+  ======================================
+; Title: footer.html 
+; Author: Chris Gorham
+; Date Created: 28 Jan 2023
+; Last Updated: 04 Feb 2023
+; Description: The code for the Florence Mae Gifts Footer (used on every page)
+; Sources Used: W3 Schools CSS Template https://www.w3schools.com/css/css_templates.asp
+;=====================================
+----->
+
 
         <hr>
         <p>Please refer to my <a href="disclaimers.html">disclaimers</a> page for all licensing and legal information. Last Updated: January 31, 2023.</p>
