--- a/header.html
+++ b/header.html
@@ -2,7 +2,8 @@
   ======================================
 ; Title: header.html 
 ; Author: Chris Gorham
-; Date: 28 Jan 2023
+; Date Created: 28 Jan 2023
+; Last Updated: 04 Feb 2023
 ; Description: The code for the Florence Mae Gifts Logo / Header (used on every page)
 ; Sources Used: W3 Schools CSS Template https://www.w3schools.com/css/css_templates.asp
 ;=====================================
