--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   ======================================
 ; Title: index.html 
 ; Author: Chris Gorham
-; Date: 11 Jan 2023
+; Date Created: 11 Jan 2023
+; Last Updated: 04 Feb 2023
 ; Description: The code for the Florence Mae Gifts Landing Page (index.html)
 ; Sources Used: W3 Schools CSS Template https://www.w3schools.com/css/css_templates.asp
 ;=====================================
@@ -12,26 +13,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Florence Mae Gifts</title>
-    <script src="https://kit.fontawesome.com/aeba1ec76b.js" crossorigin="anonymous"></script>
-    <meta name="description" content="Florence Mae Gifts">
-    <meta http-equiv="author" content ="Chris Gorham">
-    <meta charset="UTF-8">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lora&family=Varela+Round&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans+Extra+Condensed:wght@100&display=swap" rel="stylesheet">
-    <link href="fmg.css" type="text/css" rel="stylesheet">
-    <link href="logo-font/logo-font.css" type="text/css" rel="stylesheet">
-    <link rel="icon" href="images/favicon.png">
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Florence Mae Gifts</title>
+  <script src="https://kit.fontawesome.com/aeba1ec76b.js" crossorigin="anonymous"></script>
+  <meta name="description" content="Florence Mae Gifts">
+  <meta http-equiv="author" content ="Chris Gorham">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!---The JavaScript source doe for the theme functions setDefaultTheme and setSelectedTheme-->
-    <script src="theme.js"></script>
-    <!---The JavaScript source code for the include HTML function-->
-    <script src="includeHTML.js"></script>
+  <!--Fonts-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lora&family=Varela+Round&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans+Extra+Condensed:wght@100&display=swap" rel="stylesheet">
+
+  <!--Style Sheets-->
+  <link href="fmg.css" type="text/css" rel="stylesheet">
+  <link href="logo-font/logo-font.css" type="text/css" rel="stylesheet">
+
+  <!--Favorites Icon-->
+  <link rel="icon" href="images/favicon.png">
+  
+
+  <!---The JavaScript source doe for the theme functions setDefaultTheme and setSelectedTheme-->
+  <script src="theme.js"></script>
+  
+  <!---The JavaScript source code for the include HTML function-->
+  <script src="includeHTML.js"></script>
+
 
 </head>
 
@@ -530,7 +539,7 @@
 </div>
 
 <!---Footer-->
-<div w3-include-html="disclaimernote.html" class="disclaimer"></div>  
+<div w3-include-html="footer.html" class="stuff-centered"></div>  
 
 
           <script>
