--- a/reviewsleftcolumn.html
+++ b/reviewsleftcolumn.html
@@ -2,7 +2,8 @@
   ======================================
 ; Title: reviewsleftcolumn.html 
 ; Author: Chris Gorham
-; Date: 11 Jan 2023
+; Date Created: 11 Jan 2023
+; Last Updated: 04 Feb 2023
 ; Description: The code for the Florence Mae Gifts Reviews Left Column Section
 ; Sources Used: W3 Schools CSS Template https://www.w3schools.com/css/css_templates.asp
 ;=====================================
