--- a/reviews.html
+++ b/reviews.html
@@ -15,7 +15,7 @@
 
 <head>
     
-  <title>Request Custom Piece - Florence Mae Gifts</title>
+  <title>Reviews - Florence Mae Gifts</title>
   <script src="https://kit.fontawesome.com/aeba1ec76b.js" crossorigin="anonymous"></script>
   <meta name="description" content="Florence Mae Gifts">
   <meta http-equiv="author" content ="Chris Gorham">
