--- a/reviewsleftcolumn.html
+++ b/reviewsleftcolumn.html
@@ -9,10 +9,12 @@
 ;=====================================
 ----->
 
-<p>
-    5 Star Rated on Etsy! Check out my shop reviews:<br>
-    <a href="https://www.etsy.com/shop/florencemaegifts#reviews" target="resource window">Etsy Reviews</a><br><br>
-    <img src="images/5star.png" width="50%" height="50%" alt="5 Star Rated on Etsy"><br><br><br>
+      <p class="stuff-centered">
+        "Star Seller" on Etsy! Check out my shop reviews:<br>
+        <a href="https://www.etsy.com/shop/florencemaegifts#reviews" target="resource window">Etsy Reviews</a><br><br>
+    
+    
+    <img src="images/5star.png" height="85%" width="85%" alt="5 Star Rated on Etsy"><br><br><br>
     </p>
 
     <p><b><u>Custom Order Reviews:</u></b></p><br>
