--- a/header.html
+++ b/header.html
@@ -11,8 +11,8 @@
 
 <table>
     <TR>
-      <TD style="width:15%"><img src="images/flower1.png" width="80%" height="80%"></TD>
+      <TD style="width:15%" class="hidden-mobile"><img src="images/flower1.png" width="80%" height="80%"></TD>
       <TD style="width:30%"><h1>Florence Mae</h1><hr width="200"><h2>GIFTS</h2></TD>
-      <TD style="width:15%"><img src="images/flower2.png" width="80%" height="80%"></TD>
+      <TD style="width:15%" class="hidden-mobile"><img src="images/flower2.png" width="80%" height="80%"></TD>
     </TR>
 </table>
