more mobile updates

--- a/topnav.html
+++ b/topnav.html
@@ -14,6 +14,6 @@
 <a href="reviews.html"><i class="fa-solid fa-star"></i> Reviews</A>
 <a href="request.html"><i class="fa-solid fa-keyboard"></i> Request Custom Piece</a>
 <a href="disclaimers.html"><i class="fa-solid fa-scale-balanced"></i> Disclaimers</a>
-<a href="#contact" style="float:right"><i class="fa-solid fa-message"></i> Contact</a>
+<a href="#contact" style="float:right" class="hidden-mobile"><i class="fa-solid fa-message hidden-mobile"></i> Contact</a>
 <a href="https://www.instagram.com/florencemaegifts/" style="float:right" target="resource window"><i class="fa-brands fa-instagram"></i> Instagram</a>
 <a href="https://www.etsy.com/shop/florencemaegifts" style="float:right" target="resource window"><i class="fa-brands fa-etsy" alt="etsy"></i>  Etsy</a>
