--- a/rightcolumn.html
+++ b/rightcolumn.html
@@ -28,8 +28,8 @@
 
   
             <a id="contact"></a><br>
-            <div><i class="fa-solid fa-message"></i> Send me a message here:<br><br>
-              <div class="container">
+            <div class="hidden-mobile"><i class="fa-solid fa-message"></i> Send me a message here:<br><br>
+              <div class="container hidden-mobile">
                 <form action="https://formspree.io/f/xnqrpewl">
               
                   <label for="name">Your Name:</label><br><br>
