--- a/rightcolumn.html
+++ b/rightcolumn.html
@@ -10,7 +10,7 @@
 ----->
 
 
-      <div class="right-column-text">
+      <div class="right-column-text hidden-mobile">
 
         <p><i class="fa-regular fa-thumbs-up fa-fw page-margin-right"></i>Thanks for visiting!</p>
     
@@ -28,7 +28,7 @@
 
   
             <a id="contact"></a><br>
-            <div class="hidden-mobile"><i class="fa-solid fa-message"></i> Send me a message here:<br><br>
+            <div><i class="fa-solid fa-message"></i> Send me a message here:<br><br>
               <div class="container hidden-mobile">
                 <form action="https://formspree.io/f/xnqrpewl">
               
