--- a/rightcolumn.html
+++ b/rightcolumn.html
@@ -28,7 +28,7 @@
 
   
             <a id="contact"></a><br>
-            <div><i class="fa-solid fa-message"></i> Send me a message here:<br><br>
+            <div class="hidden-mobile"><i class="fa-solid fa-message"></i> Send me a message here:<br><br>
               <div class="container hidden-mobile">
                 <form action="https://formspree.io/f/xnqrpewl">
               
