--- a/request.html
+++ b/request.html
@@ -61,7 +61,7 @@
 
     </div>
                     
-    <div w3-include-html="rightcolumn.html" class="rightcolumn"></div>
+    <div w3-include-html="rightcolumn.html" class="rightcolumn hidden-mobile"></div>
 
     <!---Closes all other divs and allows the disclaimer note to be the Footer--> 
     </div>
