--- a/reviews.html
+++ b/reviews.html
@@ -15,9 +15,9 @@
 
 <head>
     
-  <title>Reviews - Florence Mae Gifts</title>
+  <title>Reviews - Florence Mae Gifts - Premium Handmade Crochet Items</title>
   <script src="https://kit.fontawesome.com/aeba1ec76b.js" crossorigin="anonymous"></script>
-  <meta name="description" content="Florence Mae Gifts">
+  <meta name="description" content="Reviews of Florence Mae Gifts from Etsy, Facebook Marketplace, and more.">
   <meta http-equiv="author" content ="Chris Gorham">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
