--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <html lang="en">
 <head>
 
-  <title>Florence Mae Gifts</title>
+  <title>Florence Mae Gifts - Premium Handmade Crochet Items</title>
   <script src="https://kit.fontawesome.com/aeba1ec76b.js" crossorigin="anonymous"></script>
-  <meta name="description" content="Florence Mae Gifts">
+  <meta name="description" content="Florence Mae Gifts makes premium, handmade  items and gifts such as Amigurumi dolls, crochet baby diaper sets, items inspired by pop culture, and more!">
   <meta http-equiv="author" content ="Chris Gorham">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
