--- a/about.html
+++ b/about.html
@@ -14,9 +14,9 @@
 
   <head>
 
-    <title>About The Artist - Florence Mae Gifts</title>
+    <title>About The Artist - Florence Mae Gifts - Premium Handmade Crochet Items</title>
     <script src="https://kit.fontawesome.com/aeba1ec76b.js" crossorigin="anonymous"></script>
-    <meta name="description" content="Florence Mae Gifts">
+    <meta name="description" content="All about the artist behind Florence Mae Gifts">
     <meta http-equiv="author" content ="Chris Gorham">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
