--- a/disclaimers.html
+++ b/disclaimers.html
@@ -15,9 +15,9 @@
 
   <head>
     
-    <title>Disclaimers - Florence Mae Gifts</title>
+    <title>Disclaimers - Florence Mae Gifts - Premium Handmade Crochet Items</title>
     <script src="https://kit.fontawesome.com/aeba1ec76b.js" crossorigin="anonymous"></script>
-    <meta name="description" content="Florence Mae Gifts">
+    <meta name="description" content="Disclaimers and legal notices for the Florence Mae Gifts website">
     <meta http-equiv="author" content ="Chris Gorham">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
