--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <div class="row">
                 <div class="column">
 
-                  <img class="examples" id="example1" src="images/example1.jpeg" alt="Slowking from Pokémon">
+                  <img class="examples" id="example1" src="images/example1.jpeg" alt="Slowking from Pokémon Amigurumi Doll">
 
                       <!-- The Modal -->
                       <div id="myModal" class="modal">
@@ -95,7 +95,7 @@
                       </script>
 
 
-                  <img class="examples" id="example5" class="examples" src="images/example5.png" alt="Dumbo Baby Set (Beanie and Diaper Cover)">
+                  <img class="examples" id="example5" class="examples" src="images/example5.png" alt="Dumbo Crochet Baby Set (Beanie and Diaper Cover)">
 
                   <script>
                     // Get the modal
@@ -120,7 +120,7 @@
                     }
                     </script>
 
-                  <img class="examples" id="example18" src="images/example18.png" alt="Rainbow Axolotl">
+                  <img class="examples" id="example18" src="images/example18.png" alt="Rainbow Axolotl Amigurumi Doll">
 
                   <script>
                     // Get the modal
@@ -146,7 +146,7 @@
                     </script>
 
 
-                  <img class="examples" id="example12" src="images/example12.png" alt="Squirt from Finding Nemo">
+                  <img class="examples" id="example12" src="images/example12.png" alt="Squirt from Finding Nemo Amigurumi Doll">
                     
                   <script>
                     // Get the modal
@@ -174,7 +174,7 @@
                 </div>
                 <div class="column">
 
-                  <img class="examples" id="example30" src="images/example30.jpg" alt="Dragonball Z Kid Gohan Baby Hat Custom Order">
+                  <img class="examples" id="example30" src="images/example30.jpg" alt="Dragonball Z Inspired Kid Gohan Baby Crochet Hat">
 
                   <script>
                     // Get the modal
