--- a/request.html
+++ b/request.html
@@ -15,9 +15,9 @@
 
   <head>
     
-    <title>Request Custom Piece - Florence Mae Gifts</title>
+    <title>Request Custom Piece - Florence Mae Gifts - Premium Handmade Crochet Items</title>
     <script src="https://kit.fontawesome.com/aeba1ec76b.js" crossorigin="anonymous"></script>
-    <meta name="description" content="Florence Mae Gifts">
+    <meta name="description" content="Fill out the form to request a custom-made order from Florence Mae Gifts">
     <meta http-equiv="author" content ="Chris Gorham">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
